--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -49,10 +49,13 @@
      <Compile Include="Assets\scripts\BombPuzzle.cs" />
      <Compile Include="Assets\scripts\Movement.cs" />
      <Compile Include="Assets\scripts\Speech.cs" />
+     <Compile Include="Assets\scripts\Speech2.cs" />
      <Compile Include="Assets\scripts\TopDownMovement.cs" />
+     <Compile Include="Assets\scripts\bulletScript.cs" />
      <Compile Include="Assets\scripts\delivery_light.cs" />
      <Compile Include="Assets\scripts\playerScript_delivery.cs" />
      <Compile Include="Assets\scripts\scene1.cs" />
+     <Compile Include="Assets\scripts\shootingScript.cs" />
      <None Include="Assets\this is an asset.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.2/UnityEngine.UI.dll</HintPath>
