--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -39,10 +39,10 @@
 	<Reference Include="System.Core" />
 	<Reference Include="System.Xml.Linq" />
 	<Reference Include="UnityEngine">
-	  <HintPath>D:/Programs/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEditor">
-	  <HintPath>D:/Programs/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
 	</Reference>
   </ItemGroup>
   <ItemGroup>
@@ -50,14 +50,17 @@
      <Compile Include="Assets\scripts\CheckBomb.cs" />
      <Compile Include="Assets\scripts\Movement.cs" />
      <Compile Include="Assets\scripts\Speech.cs" />
+     <Compile Include="Assets\scripts\Speech2.cs" />
      <Compile Include="Assets\scripts\TopDownMovement.cs" />
      <Compile Include="Assets\scripts\WireColor.cs" />
+     <Compile Include="Assets\scripts\bulletScript.cs" />
      <Compile Include="Assets\scripts\delivery_light.cs" />
      <Compile Include="Assets\scripts\playerScript_delivery.cs" />
      <Compile Include="Assets\scripts\scene1.cs" />
+     <Compile Include="Assets\scripts\shootingScript.cs" />
      <None Include="Assets\this is an asset.txt" />
  <Reference Include="UnityEngine.UI">
- <HintPath>D:/Programs/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.2/UnityEngine.UI.dll</HintPath>
+ <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.2/UnityEngine.UI.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
