--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\scripts\AIforShooting.cs" />
      <Compile Include="Assets\scripts\BombSceneMovement.cs" />
      <Compile Include="Assets\scripts\CheckBomb.cs" />
      <Compile Include="Assets\scripts\Movement.cs" />
