--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -52,6 +52,7 @@
      <Compile Include="Assets\scripts\Movement.cs" />
      <Compile Include="Assets\scripts\Speech.cs" />
      <Compile Include="Assets\scripts\Speech2.cs" />
+     <Compile Include="Assets\scripts\Speech3.cs" />
      <Compile Include="Assets\scripts\TopDownMovement.cs" />
      <Compile Include="Assets\scripts\WireColor.cs" />
      <Compile Include="Assets\scripts\bulletScript.cs" />
